--- a/MoviePage.html
+++ b/MoviePage.html
@@ -5077,6 +5077,43 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://www.themoviedb.org/t/p/original/yuNs09hvpHVU1cBTCAk9zxsL2oW.jpg"
+                alt="Movie 2 Poster"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Memento</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 9.2</span
+                  >
+                </div>
+                <span class="movie-year-text">2000</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://www.themoviedb.org/t/p/original/gl295sH8213lY8aQ8hS2tTbuzYD.jpg"
                 class="movie-poster"
               />
@@ -6456,6 +6493,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/6ojHgqtIR41O2qLKa7LFUVj0cZa.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">The Talented Mr. Ripley</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 9.0</span
+                  >
+                </div>
+                <span class="movie-year-text">1999</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://image.tmdb.org/t/p/original/ekstpH614fwDX8DUln1a2Opz0N8.jpg"
                 class="movie-poster"
               />
@@ -6539,43 +6612,6 @@
                   >
                 </div>
                 <span class="movie-year-text">1999</span>
-              </div>
-              <div class="action-circle">
-                <a href="#" class="icon AddFavorite">
-                  <div class="tooltip">Add to Favorite</div>
-                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-                </a>
-                <a href="#" class="icon RateIt">
-                  <div class="tooltip">Rate It</div>
-                  <span><i class="fa-solid fa-star"></i></span>
-                </a>
-                <a href="#" class="icon watchlist">
-                  <div class="tooltip">Add to Watchlist</div>
-                  <span><i class="bx bx-list-plus"></i></span>
-                </a>
-                <a href="https://www.youtube.com" class="icon youtube">
-                  <div class="tooltip">Play Trailer</div>
-                  <span><i class="fab fa-youtube"></i></span>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="movie-item">
-            <div class="movie-content">
-              <img
-                src="https://www.themoviedb.org/t/p/original/yuNs09hvpHVU1cBTCAk9zxsL2oW.jpg"
-                alt="Movie 2 Poster"
-                class="movie-poster"
-              />
-              <h2 class="movie-title">Memento</h2>
-              <div class="movie-rating">
-                <div class="ratings-container">
-                  <span class="movie-rating-text"
-                    ><img src="./images/IMDb_logo.png" /> 8.9</span
-                  >
-                </div>
-                <span class="movie-year-text">2000</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -7412,6 +7448,42 @@
                   >
                 </div>
                 <span class="movie-year-text">1997</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="Temhttps://image.tmdb.org/t/p/original/lGM09eiaaJbEOoAU0LowujIjsD8.jpgplate"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">The Incredible Burt Wonderstone</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.5</span
+                  >
+                </div>
+                <span class="movie-year-text">2013</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
